@startuml

class Oystercard {
    MIN_REQUIRED_AMOUNT
    MAX_BALANCE
    balance
    + journeys
    ..
    + top_up(sum)
    + touch_in(station)
    + touch_out(station)

    - deduct(sum)
}

class Station {
    name
    zone
    + initialize(name)
    + get_zone(filename=)
}

class Journey {
    + initialize(entry_station, exit_station)
    + complete?()
   }

class JourneyLog {
    journey_class
    initialize(journey_class = Journey)
    +start_journey(station)
    +finish_journey(station)
}

class Billing {
    PENALTY_FARE
    DEFAULT_FARE
    COST_PER_ZONE
    + calculate_fare(journey)
    - lookup_zone_crossing_fare(src_zone, dst_zone)
}

Oystercard .. Station
Journey *--> "2" Station: stations
Oystercard *--> JourneyLog: -journey_log
JourneyLog *--> "*" Journey: journeys
JourneyLog *--> Billing

@enduml